# math

./: .gitignore  CMakeLists.txt  README.md  main.cpp
engine/: main.cpp
euclid-elements/: README.md
euclid-elements/book1/: common-notions.txt  definitions.txt  postulates.txt
include/: ClassMatrix.hpp  ClassPoint.hpp  ClassVector.hpp  astra.hpp  main.hpp
legacy/: LLFC.h  laMatrix.c  laVectors.c  linearTypes.h
legacy/include/: ClassVector.hpp  atClassMatrix.hpp  atClassVector.hpp
logic/: README.md
plotter/: CMakeLists.txt
plotter/src/: main.cpp
source/: ClassMatrix.cpp  ClassVector.cpp  laMatrix.c  main.cpp
src/: complex.hpp  complex.tex  main.cpp  matrix.hpp  polynomial.cpp  polynomial.hpp  set.hpp  vector.hpp
src/linear-algebra/: README.md
test/: main.cpp  test_complex.hpp  test_polynomial.hpp  test_vector.cpp  test_vector.hpp
