cmake_minimum_required(VERSION 2.8.9)
project(test)
include_directories(include)
#set(SOURCES src/mainapp.cpp src/Student.cpp)
SET(GCC_COVERAGE_COMPILE_FLAGS "-std=c++14")
SET(GCC_COVERAGE_LINK_FLAGS    "")
SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")
SET(CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} ${GCC_COVERAGE_LINK_FLAGS}")
file(GLOB SOURCES "source/*.cpp")
add_executable("main" ${SOURCES})